--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="icon-container">
-      <a href="projects.html">
+      <a href="/projects.html">
         <i class="fas fa-play"></i>
       </a>
       <a href="https://dfs3rzq44v6as.cloudfront.net/prxy/">
